# emiko

./: Cargo.toml  README.md
models/: Modelfile
src/: args.rs  lib.rs  main.rs
src/logger/: logger.rs
src/memory/: memory.rs
src/rag/: rag.rs
