[package]
name = "emiko"
version = "1.0.0"
edition = "2021"
authors = ["Fastiraz"]
description = "Emiko is an AI powered assistant that can execute commands on your shell."

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
structopt = "0.3.26"
tokio = { version = "1.41.1", features = ["full"] }
