[package]
name = "emiko"
version = "0.3.0-pre-alpha"
edition = "2021"
authors = ["Fastiraz"]
description = "Emiko is an AI powered assistant that can execute commands on your shell."

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.35", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
